--- a/research/patent.html
+++ b/research/patent.html
@@ -85,7 +85,7 @@
                     <th>등록번호</th>
                   </tr>
                 </thead>
-                <tbody>
+                <tbody id="patent-tbody">
                   <tr>
                     <td data-title="ID">1</td>
                     <td data-title="Name">주의력결핍과잉행동장애 치료용 조성물 (황금추출물)</td>
