--- a/research/paper.html
+++ b/research/paper.html
@@ -76,15 +76,14 @@
             <ul class="article-list">
             </ul>
             <h1>Patents</h1>
-            <div class="table-responsive-vertical shadow-z-1">
-               <h3>특허등록</h3>
+            <div style="margin-top:20px;" class="table-responsive-vertical shadow-z-1">
                <table id="table" class="table table-mc-light-blue">
                     <thead>
                       <tr>
                         <th>번호</th>
-                        <th>내용</th>
+                        <th>특허명</th>
                         <th>출원번호</th>
-                        <th>등록번호</th>
+                        <th>PCT 출원번호</th>
                       </tr>
                     </thead>
                     <tbody class="patent-tbody">
