--- a/research/paper.html
+++ b/research/paper.html
@@ -75,7 +75,7 @@
             <h1>Papers</h1>
             <ul class="article-list">
             </ul>
-            <h1>Patents</h1>
+            <h1 style="margin-top:80px;">Patents</h1>
             <div style="margin-top:20px;" class="table-responsive-vertical shadow-z-1">
                <table id="table" class="table table-mc-light-blue">
                     <thead>
