--- a/rd/1.html
+++ b/rd/1.html
@@ -103,6 +103,7 @@
               </div>
             </div>
           </div>
+          <img style="margin-top: 20px;" align="middle"  src="/assets/rd_1.png" alt="rd" />
         </article>
         <footer class="footer ">
           <p>
