--- a/rd/1.html
+++ b/rd/1.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="/assets/fonts.css">
   <link rel="stylesheet" href="/assets/light.css">
   <link rel="stylesheet" href="/assets/custom.css">
+  <script defer src="/assets/fontawesome-all.min.js"></script>
 </head>
 <body>
   <main>
