--- a/rd/1.html
+++ b/rd/1.html
@@ -85,24 +85,24 @@
                 <div class="rdservice-icon">
                   <i class="fas fa-hospital"></i>
                 </div>
-                <h4 style="text-align:center; margin-bottom: 20px;">다양한 뇌질환 모델,  in vivo 효능평가 및 기전연구 시스템, in vitro 효능평가 및 기전연구 시스템  확보</h4>
+                <p style="text-align:center; margin-bottom: 20px;">다양한 뇌질환 모델,  in vivo 효능평가 및 기전연구 시스템, in vitro 효능평가 및 기전연구 시스템  확보</p>
               </div>
               <div class="rdservice-box">
                 <div class="rdservice-icon">
                   <i class="fas fa-flask"></i>
                 </div>
-                <h4 style="text-align:center; margin-bottom: 20px;">공동 연구 및 연구개발 서비스 문의 신청 후 상담을 통해 모델선정, 예비실험, 평가법 설정</h4>
+                <p style="text-align:center; margin-bottom: 20px;">공동 연구 및 연구개발 서비스 문의 신청 후 상담을 통해 모델선정, 예비실험, 평가법 설정</p>
               </div>
               <div class="rdservice-box">
                 <div class="rdservice-icon">
                   <i class="fas fa-user-md"></i>
                 </div>
-                <h4 style="text-align:center; margin-bottom: 20px;">수요자 니즈에 적합한 최적의 연구계획 수립</h4>
+                <p style="text-align:center; margin-bottom: 20px;">수요자 니즈에 적합한 최적의 연구계획 수립</p>
               </div>
             </div>
           </div>
-          <h1 style="margin-top:80px;">서비스 신청 절차</h1>
-          <img style="margin-top: 20px;" align="middle"  src="/assets/rd_1.png" alt="rd" />
+          <h2 style="margin-top:80px;">서비스 신청 절차</h1>
+          <img style="margin-top: 50px;" align="middle"  src="/assets/rd_1.png" alt="rd" />
         </article>
         <footer class="footer ">
           <p>
