--- a/rd/1.html
+++ b/rd/1.html
@@ -97,7 +97,7 @@
                 <div class="rdservice-icon">
                   <i class="fas fa-user-md"></i>
                 </div>
-                <p style="text-align:center; margin-bottom: 20px;">수요자 니즈에 적합한 <span/>최적의 연구계획 수립</p>
+                <p style="text-align:center; margin-bottom: 20px;">수요자 니즈에 적합한 <br/>최적의 연구계획 수립</p>
               </div>
             </div>
           </div>
