--- a/rd/1.html
+++ b/rd/1.html
@@ -85,13 +85,13 @@
                 <div class="rdservice-icon">
                   <i class="fas fa-hospital"></i>
                 </div>
-                <p style="text-align:center; margin-bottom: 20px;">다양한 뇌질환 모델,  in vivo 효능평가 및 기전연구 시스템, in vitro 효능평가 및 기전연구 시스템  확보</p>
+                <p style="text-align:center; margin-bottom: 20px;">다양한 뇌질환 모델,<br> in vivo 효능평가 및 기전연구 시스템, <br> in vitro 효능평가 및 기전연구 시스템 확보</p>
               </div>
               <div class="rdservice-box">
                 <div class="rdservice-icon">
                   <i class="fas fa-flask"></i>
                 </div>
-                <p style="text-align:center; margin-bottom: 20px;">공동 연구 및 연구개발 서비스 문의 신청 후 상담을 통해 모델선정, 예비실험, 평가법 설정</p>
+                <p style="text-align:center; margin-bottom: 20px;">공동 연구 및 연구개발 서비스 <br> 문의 신청 후 상담을 통해 <br>모델선정, 예비실험, 평가법 설정</p>
               </div>
               <div class="rdservice-box">
                 <div class="rdservice-icon">
