--- a/rd/1.html
+++ b/rd/1.html
@@ -85,7 +85,7 @@
                 <div class="rdservice-icon">
                   <i class="fas fa-hospital"></i>
                 </div>
-                <p style="text-align:center; margin-bottom: 20px;">다양한 뇌질환 모델,<br> in vivo 효능평가 및 기전연구 시스템, <br> in vitro 효능평가 및 기전연구 시스템 확보</p>
+                <p style="text-align:center; margin-bottom: 20px; white-space: pre;">다양한 뇌질환 모델,<br> in vivo 효능평가 및 기전연구 시스템, <br> in vitro 효능평가 및 기전연구 시스템 확보</p>
               </div>
               <div class="rdservice-box">
                 <div class="rdservice-icon">
