--- a/rd/4.html
+++ b/rd/4.html
@@ -72,75 +72,61 @@
         </nav>
 
         <article class="article ">
+            <h1>In vitro 효능 평가 및 기전연구 플랫폼</h1>
             <div style="margin-top:20px;" class="table-responsive-vertical shadow-z-1">
                <table id="table" class="table table-mc-light-blue">
                     <thead>
                       <tr>
-                        <th>평가항목</th>
-                        <th>적용실험기법</th>
-                        <th>활용가능질환</th>
+                        <th style="width: 20%;">평가항목</th>
+                        <th>활용범위 및 실험기법</th>
+                        <th>활용 부위</th>
                       </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>행동평가 분석시스템</td>
-                            <td>AI 딥러닝 기반 3차원 행동분석 자동화 분석 시스템 Ethovision XT System</td>
-                            <td>자폐스펙트럼장애, ADHD, 우울증, 조현병, PD, AD등 뇌신경질환</td>
-                        </tr>
-                        <tr>
-                            <td>사회성, 사회선택성</td>
-                            <td>Three chamber test, Home cage social test, Social Dominance Tube Test</td>
-                            <td>자폐스펙트럼장애, 조현병</td>
-                        </tr>
-                        <tr>
-                            <td>의사소통</td>
-                            <td>Ultrasonic vocalization: Sonotrack</td>
-                            <td>자폐스펙트럼장애, 조현병</td>
-                        </tr>
-                        <tr>
-                            <td>반복행동</td>
-                            <td>Marble burying test, Self grooming test, Nest building test</td>
-                            <td>자폐스펙트럼장애, ADHD, 조현병등</td>
-                        </tr>
-                        <tr>
-                            <td>운동기능</td>
-                            <td>Open field test, beam walking test, footprint test, rota-rod test, grip strength test, grid walking test, Cylinder test</td>
-                            <td>ADHD, 자폐스펙트럼장애, 우울증, PD, 뇌졸중등 뇌신경질환</td>
-                        </tr>
-                        <tr>
-                            <td>집중, 인지, 감각</td>
-                            <td>5-CSRT, Y-maze/T-maze test/Barns maze test, Novel object recognition test, Passive avoidance test, Morris water maze task, Acoustic startle response test, EEG</td>
-                            <td>ADHD, 자폐스펙트럼장애, 조현병, 치매, AD, PD, Stroke등 뇌신경질환</td>
-                        </tr>
-                        <tr>
-                            <td>불안</td>
-                            <td>Elevated plus maze test, Light-dart box test, Novel object recognition test, Open field test</td>
+                            <td>신경세포 보호작용</td>
                             <td></td>
+                            <td>조직 및 세포</td>
                         </tr>
                         <tr>
-                            <td>우울장애</td>
-                            <td>FST/TST, Acute/chronic restraint stress test, Light dark box test, Learned helplessness test, Novelty induced feeding suppression test, Sucrose preference test</td>
-                            <td>우울증, 조현병, 치매/AD, PD등 뇌신경질환</td>
+                            <td>신경염증반응</td>
+                            <td></td>
+                            <td>조직 및 세포</td>
                         </tr>
                         <tr>
-                            <td>신경전달물질</td>
-                            <td>Fast scan voltammetry 활, GABA, Glutamate, Dopamine등 측정</td>
-                            <td>ADHD, 자폐스펙트럼장애, 조현병, 치매, AD, PD, Stroke등 뇌신경질환</td>
+                            <td>분자생물학적 접근</td>
+                            <td></td>
+                            <td>조직 및 세포</td>
                         </tr>
                         <tr>
-                            <td>의존성</td>
-                            <td>Conditioned place preference (CPP) test, Self administration (SA) test</td>
-                            <td>정신질환, 부작용검증</td>
+                            <td>교세포 활성화측정</td>
+                            <td></td>
+                            <td>세포 및 뇌조직</td>
                         </tr>
                         <tr>
-                            <td>충동성</td>
-                            <td>5-CSRT, Cliff avoidance test, Delayed discounting task</td>
-                            <td>ADHD, 자폐스펙트럼장애, 조현병등 정신질환 부작용검증</td>
+                            <td>신경가소성 및 synaptogenesis 측정</td>
+                            <td></td>
+                            <td>신경줄기세포 및 신경세포, 뇌조직</td>
                         </tr>
                         <tr>
-                            <td>수면장애</td>
-                            <td>Pentobarbital-induced sleeping test, Caffeine-induced sleep deprivation test, Sleep deprivation test</td>
-                            <td>수면장애, 뇌신경질환 부작용 검증</td>
+                            <td>신경줄기세포의 증식 및 분화</td>
+                            <td></td>
+                            <td>신경줄기세포 및 신경세포, 뇌조직</td>
+                        </tr>
+                        <tr>
+                            <td>신호전달관련 분석</td>
+                            <td></td>
+                            <td>조직 및 세포</td>
+                        </tr>
+                        <tr>
+                            <td>Ca2+ Imaging</td>
+                            <td></td>
+                            <td>조직 및 세포</td>
+                        </tr>
+                        <tr>
+                            <td>Epigenetic modulation</td>
+                            <td></td>
+                            <td>조직 및 세포</td>
                         </tr>
                     </tbody>
                </table>
