--- a/rd/3.html
+++ b/rd/3.html
@@ -72,11 +72,12 @@
         </nav>
 
         <article class="article ">
+            <h1>In vivo 효능 평가 플랫폼</h1>
             <div style="margin-top:20px;" class="table-responsive-vertical shadow-z-1">
                <table id="table" class="table table-mc-light-blue">
                     <thead>
                       <tr>
-                        <th>평가항목</th>
+                        <th style="width: 20%">평가항목</th>
                         <th>적용실험기법</th>
                         <th>활용가능질환</th>
                       </tr>
