--- a/rd/3.html
+++ b/rd/3.html
@@ -85,7 +85,7 @@
                     <tbody>
                         <tr>
                             <td>행동평가 분석시스템</td>
-                            <td>AI 딥러닝 기반 3차원 행동분석 자동화 분석 시스템 Ethovision XT System</td>
+                            <td>AI 딥러닝 기반 3차원 행동분석 자동화 분석 시스템<br>Ethovision XT System</td>
                             <td>자폐스펙트럼장애, ADHD, 우울증, 조현병, PD, AD등 뇌신경질환</td>
                         </tr>
                         <tr>
