--- a/rd/4.html
+++ b/rd/4.html
@@ -85,7 +85,7 @@
                     <tbody>
                         <tr>
                             <td>신경세포 보호작용</td>
-                            <td></td>
+                            <td>1. In vivo <br>1) Hematoxylin & Eosin staining, Cresyl violet 염색<br>2) TUNEL 염색법, Fluoro Jade B 염색<br>3) TTC 염색4) Immunohisto(cyto)chemistry <br>2. in vitro <br>1) LDH 측정, MTT 분석, PI 염색, calcein AM <br>3. 신경보호인자 생성: BDNF, NT, GDNF등의 생성 및 발현 (Western blot)</td>
                             <td>조직 및 세포</td>
                         </tr>
                         <tr>
