--- a/rd/3.html
+++ b/rd/3.html
@@ -90,7 +90,7 @@
                         </tr>
                         <tr>
                             <td>사회성, 사회선택성</td>
-                            <td>Three chamber test, Home cage social test, Social Dominance Tube Test</td>
+                            <td>Three chamber test<br>Home cage social test<br>Social Dominance Tube Test</td>
                             <td>자폐스펙트럼장애, 조현병</td>
                         </tr>
                         <tr>
@@ -100,47 +100,47 @@
                         </tr>
                         <tr>
                             <td>반복행동</td>
-                            <td>Marble burying test, Self grooming test, Nest building test</td>
+                            <td>Marble burying test<br>Self grooming test<br>Nest building test</td>
                             <td>자폐스펙트럼장애, ADHD, 조현병등</td>
                         </tr>
                         <tr>
                             <td>운동기능</td>
-                            <td>Open field test, beam walking test, footprint test, rota-rod test, grip strength test, grid walking test, Cylinder test</td>
+                            <td>Open field test<br>beam walking test<br>footprint test<br>rota-rod test<br>grip strength test<br>grid walking test<br>Cylinder test</td>
                             <td>ADHD, 자폐스펙트럼장애, 우울증, PD, 뇌졸중등 뇌신경질환</td>
                         </tr>
                         <tr>
                             <td>집중, 인지, 감각</td>
-                            <td>5-CSRT, Y-maze/T-maze test/Barns maze test, Novel object recognition test, Passive avoidance test, Morris water maze task, Acoustic startle response test, EEG</td>
+                            <td>5-CSRT<br>Y-maze/T-maze test/Barns maze test<br>Novel object recognition test<br>Passive avoidance test<br>Morris water maze task<br>Acoustic startle response test<br>EEG</td>
                             <td>ADHD, 자폐스펙트럼장애, 조현병, 치매, AD, PD, Stroke등 뇌신경질환</td>
                         </tr>
                         <tr>
                             <td>불안</td>
-                            <td>Elevated plus maze test, Light-dart box test, Novel object recognition test, Open field test</td>
+                            <td>Elevated plus maze test<br>Light-dart box test<br>Novel object recognition test<br>Open field test</td>
                             <td></td>
                         </tr>
                         <tr>
                             <td>우울장애</td>
-                            <td>FST/TST, Acute/chronic restraint stress test, Light dark box test, Learned helplessness test, Novelty induced feeding suppression test, Sucrose preference test</td>
+                            <td>FST/TST<br>Acute/chronic restraint stress test<br>Light dark box test<br>Learned helplessness test<br>Novelty induced feeding suppression test<br>Sucrose preference test</td>
                             <td>우울증, 조현병, 치매/AD, PD등 뇌신경질환</td>
                         </tr>
                         <tr>
                             <td>신경전달물질</td>
-                            <td>Fast scan voltammetry 활, GABA, Glutamate, Dopamine등 측정</td>
+                            <td>Fast scan voltammetry 활용<br>GABA, Glutamate, Dopamine등 측정</td>
                             <td>ADHD, 자폐스펙트럼장애, 조현병, 치매, AD, PD, Stroke등 뇌신경질환</td>
                         </tr>
                         <tr>
                             <td>의존성</td>
-                            <td>Conditioned place preference (CPP) test, Self administration (SA) test</td>
+                            <td>Conditioned place preference (CPP) test<br>Self administration (SA) test</td>
                             <td>정신질환, 부작용검증</td>
                         </tr>
                         <tr>
                             <td>충동성</td>
-                            <td>5-CSRT, Cliff avoidance test, Delayed discounting task</td>
+                            <td>5-CSRT<br>Cliff avoidance test<br>Delayed discounting task</td>
                             <td>ADHD, 자폐스펙트럼장애, 조현병등 정신질환 부작용검증</td>
                         </tr>
                         <tr>
                             <td>수면장애</td>
-                            <td>Pentobarbital-induced sleeping test, Caffeine-induced sleep deprivation test, Sleep deprivation test</td>
+                            <td>Pentobarbital-induced sleeping test<br>Caffeine-induced sleep deprivation test<br>Sleep deprivation test</td>
                             <td>수면장애, 뇌신경질환 부작용 검증</td>
                         </tr>
                     </tbody>
