--- a/rd/3.html
+++ b/rd/3.html
@@ -78,7 +78,7 @@
                     <thead>
                       <tr>
                         <th style="width: 20%">평가항목</th>
-                        <th>적용실험기법</th>
+                        <th style="width: 50%">적용실험기법</th>
                         <th>활용가능질환</th>
                       </tr>
                     </thead>
