--- a/rd/4.html
+++ b/rd/4.html
@@ -90,42 +90,44 @@
                         </tr>
                         <tr>
                             <td>신경염증반응</td>
-                            <td></td>
+                            <td>1. ROS 관련<br>1) ROS 측정: DCFH2-DA, DHE, Rhodamine123, TMRE <br>2) 4-HNE/MDA, Peroxiredoxin등의 발현변화<br>3) 항산화물질의 변동: GSH, SOD, NADPH Oxidase, HO-1발현변화<br>4) Western blot, RT-PCR, Enzyme activity assay (ELISA)<br>2. 염증성매개인자의 발현 <br>1) 염증성 Cytokines 발현: iL-1beta, IL-6, IL-18, TNFalpha, TGFbeta 등<br>2) COX-2/PGs발현, iNOS/NO 발현 및 분비<br>3) mmps, tPA/PAI-1 발현 및 효소활성<br>4) Western blot, RT-PCR, Zymography, ELISA
+</td>
                             <td>조직 및 세포</td>
                         </tr>
                         <tr>
                             <td>분자생물학적 접근</td>
-                            <td></td>
+                            <td>1) 유전자 발현 변동: RT-PCR, Microarray, PCR-Array, ChIP assay<br>2) Gene knockdown by Transient transfection: siRNA/shRNA transfection<br>3) Gene Overexpression</td>
                             <td>조직 및 세포</td>
                         </tr>
                         <tr>
                             <td>교세포 활성화측정</td>
-                            <td></td>
+                            <td>1) GFAP, NG2, Iba-1, OX-6, MBP, Ki-67 염색 <br>2) migration assay : migration chamber 사용, Co-culture system (transwell 사용)<br>3) phagocytosis: phagocytotic receptor 발현 변화 (Western blot), phagocytosis 측정<br>4) protease 활성정도: MMP9, tPA/PAI-1 활성 및 발현</td>
                             <td>세포 및 뇌조직</td>
                         </tr>
                         <tr>
                             <td>신경가소성 및 synaptogenesis 측정</td>
-                            <td></td>
+                            <td>1) NCAM, BDNF, tPA/PAI-1, MMPs 분비와 발현 변화확인 (Western blot, RT-PCR, ELISA, Zymography)<br>2) PSD95, Synaptophysin 염색 및 발현 양 비교 (Immunohistochemistry, Western blot)<br>3) nNOS/NO 활성<br>4) 시냅스 분석: Synaptosomal fraction 에 의한 Western blot<br>5) EM 사진에 의한 분석</td>
                             <td>신경줄기세포 및 신경세포, 뇌조직</td>
                         </tr>
                         <tr>
                             <td>신경줄기세포의 증식 및 분화</td>
-                            <td></td>
+                            <td>1) 증식: MTT 분석, 면역 염색법 (Ki-67, BrdU, Nestin, doublecortin)<br>2) 분화: NeuN/Tuj-1, Nestin, GFAP등을 이용한 면역염색 및 Western blot<br>3) NCAM, BDNF, tPA/PAI-1, MMPs 분비와 발현 변화확인 (Western blot, RT-PCR, ELISA, tPA/PAI-1 Zymography)<br>4) Live cell imaging<br>5) Neurite outgrowth 측정: Inucyte analyzing system활용, Immunostaining을 통해 neurite 숫자, neurite 길이 측정 </td>
                             <td>신경줄기세포 및 신경세포, 뇌조직</td>
                         </tr>
                         <tr>
                             <td>신호전달관련 분석</td>
-                            <td></td>
+                            <td>1) 염증 및 세포 사멸관련 신호전달기전<br>- Src, Fyn, Syk, calcineurin, TLR2/4, JAK/STAT, MAPKs, PKC, PKA, PKG, iNOS, mTOR, s6k1, AMPK, GSK3beta, PI3K, Akt, NF-kB, IkB, AP1, SP1, Nrf2/Keap1, FOXO, PARs, 등<br>2) 시냅스, 신경세포재생 및 인지기능 관련<br>- PI3K/Akt, MAPKs, BDNF, GDNF, eNOS/nNOS, c-fos, ARC,  CREB, CAMKII, Casein kinase, aurora kinase, </td>
                             <td>조직 및 세포</td>
                         </tr>
                         <tr>
                             <td>Ca2+ Imaging</td>
-                            <td></td>
+                            <td>1) Ca2+ imaging: Fura2/4 AM,을 이용한 세포내 Ca2+ level 변화<br>2) Oregon Green BAPTA-1<br>3) ELISA/Immunofluorescence</td>
                             <td>조직 및 세포</td>
                         </tr>
                         <tr>
                             <td>Epigenetic modulation</td>
-                            <td></td>
+                            <td>1) DNA methylation : DNA methyltransferases (DNMT1, 3a/3b, MeCP2<br>2) Histone acetylation: Histone acetyltransferase (HATs), Histone deacetylase (HDACs)<br>3) Histone methyltransferases (HMTs), histone demethylases, and histone kinases
+Western blot/RT-PCR 통한 각 enzymes의 발현변화<br>4) HDAC activity assay<br>5) DNA methylation assay (ChiP assay)</td>
                             <td>조직 및 세포</td>
                         </tr>
                     </tbody>
