--- a/research/paper.html
+++ b/research/paper.html
@@ -80,9 +80,9 @@
                <table id="table" class="table table-mc-light-blue">
                     <thead>
                       <tr>
-                        <th></th>
+                        <th style="width: 5%;"></th>
                         <th>특허명</th>
-                        <th>출원번호</th>
+                        <th style="width: 20%">출원번호</th>
                         <th>PCT 출원번호</th>
                       </tr>
                     </thead>
