--- a/rd/2.html
+++ b/rd/2.html
@@ -73,79 +73,7 @@
 
         <article class="article ">
             <h1>In vivo 효능 평가 플랫폼</h1>
-            <div style="margin-top:20px;" class="table-responsive-vertical shadow-z-1">
-               <table id="table" class="table table-mc-light-blue">
-                    <thead>
-                      <tr>
-                        <th style="width: 20%">평가항목</th>
-                        <th style="width: 50%">적용실험기법</th>
-                        <th>활용가능질환</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>행동평가 분석시스템</td>
-                            <td>AI 딥러닝 기반 3차원 행동분석 자동화 분석 시스템<br>Ethovision XT System</td>
-                            <td>자폐스펙트럼장애, ADHD, 우울증, 조현병, PD, AD등 뇌신경질환</td>
-                        </tr>
-                        <tr>
-                            <td>사회성, 사회선택성</td>
-                            <td>Three chamber test<br>Home cage social test<br>Social Dominance Tube Test</td>
-                            <td>자폐스펙트럼장애, 조현병</td>
-                        </tr>
-                        <tr>
-                            <td>의사소통</td>
-                            <td>Ultrasonic vocalization: Sonotrack</td>
-                            <td>자폐스펙트럼장애, 조현병</td>
-                        </tr>
-                        <tr>
-                            <td>반복행동</td>
-                            <td>Marble burying test<br>Self grooming test<br>Nest building test</td>
-                            <td>자폐스펙트럼장애, ADHD, 조현병등</td>
-                        </tr>
-                        <tr>
-                            <td>운동기능</td>
-                            <td>Open field test<br>beam walking test<br>footprint test<br>rota-rod test<br>grip strength test<br>grid walking test<br>Cylinder test</td>
-                            <td>ADHD, 자폐스펙트럼장애, 우울증, PD, 뇌졸중등 뇌신경질환</td>
-                        </tr>
-                        <tr>
-                            <td>집중, 인지, 감각</td>
-                            <td>5-CSRT<br>Y-maze/T-maze test/Barns maze test<br>Novel object recognition test<br>Passive avoidance test<br>Morris water maze task<br>Acoustic startle response test<br>EEG</td>
-                            <td>ADHD, 자폐스펙트럼장애, 조현병, 치매, AD, PD, Stroke등 뇌신경질환</td>
-                        </tr>
-                        <tr>
-                            <td>불안</td>
-                            <td>Elevated plus maze test<br>Light-dart box test<br>Novel object recognition test<br>Open field test</td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td>우울장애</td>
-                            <td>FST/TST<br>Acute/chronic restraint stress test<br>Light dark box test<br>Learned helplessness test<br>Novelty induced feeding suppression test<br>Sucrose preference test</td>
-                            <td>우울증, 조현병, 치매/AD, PD등 뇌신경질환</td>
-                        </tr>
-                        <tr>
-                            <td>신경전달물질</td>
-                            <td>Fast scan voltammetry 활용<br>GABA, Glutamate, Dopamine등 측정</td>
-                            <td>ADHD, 자폐스펙트럼장애, 조현병, 치매, AD, PD, Stroke등 뇌신경질환</td>
-                        </tr>
-                        <tr>
-                            <td>의존성</td>
-                            <td>Conditioned place preference (CPP) test<br>Self administration (SA) test</td>
-                            <td>정신질환, 부작용검증</td>
-                        </tr>
-                        <tr>
-                            <td>충동성</td>
-                            <td>5-CSRT<br>Cliff avoidance test<br>Delayed discounting task</td>
-                            <td>ADHD, 자폐스펙트럼장애, 조현병등 정신질환 부작용검증</td>
-                        </tr>
-                        <tr>
-                            <td>수면장애</td>
-                            <td>Pentobarbital-induced sleeping test<br>Caffeine-induced sleep deprivation test<br>Sleep deprivation test</td>
-                            <td>수면장애, 뇌신경질환 부작용 검증</td>
-                        </tr>
-                    </tbody>
-               </table>
-            </div>
+            <img style="margin-top: 20px;  margin-right: auto; margin-left: auto; height: auto" align="middle"  src="/assets/model.png" alt="model" />
         </article>
         <footer class="footer ">
           <p>
