--- a/about/history.html
+++ b/about/history.html
@@ -72,7 +72,7 @@
 
        
         <article class="article ">
-          <h1>회사연혁 Corporation History</h1>
+          <h1>회사연혁</h1>
           <br/>
           <br/>
           <div class="article-content">
