--- a/about/researchfocus.html
+++ b/about/researchfocus.html
@@ -72,7 +72,7 @@
 
        
         <article class="article ">
-          <h1>중점연구영역 Research Focus</h1>
+          <h1>중점연구영역</h1>
           <br/>
           <div class="article-content">
             <h3>ADHD 개요</h3>
