--- a/research/pipelines.html
+++ b/research/pipelines.html
@@ -71,7 +71,7 @@
         </nav>
 
         <article class="article ">
-          <h1>Pipelines</h1>
+          <h1>파이프라인</h1>
           <br/>
           <br/>
           <div class="article-content">
