--- a/research/fieldsofresearch.html
+++ b/research/fieldsofresearch.html
@@ -71,7 +71,7 @@
         </nav>
 
         <article class="article ">
-          <h1>연구분야 Fields of Research</h1>
+          <h1>연구분야</h1>
           <br/>
           <br/>
           <div class="article-content">
