--- a/research/paper.html
+++ b/research/paper.html
@@ -110,18 +110,20 @@
           for (var singleRow = 0; singleRow < allRows.length - 1; singleRow++) {
                 var rowCells = allRows[singleRow].split('\t');
                 var post = '<li class="article-list-item">';
-                post += '<a href="asdf" title="asdf">';
+                post += '<a href="';
+                post += rowCells[3];
+                post += '" title="paper">';
                 post += '<h5>';
                 post += rowCells[0];
                 post += '</h5></a>';
                 post += '<p style="font-size: 12px;">';
-                post += rowCells[1];
+                post += rowCells[2];
                 post += '</p>';
                 post += '<p>';
                 post += rowCells[2];
                 post += '</p>';
                 post += '<div class="article-list-footer"><span class="article-list-date">';
-                post += rowCells[3];
+                post += rowCells[4];
                 post += '</span></div>';
                 $(".article-list").append(post);
         }
