--- a/research/paper.html
+++ b/research/paper.html
@@ -111,20 +111,20 @@
                 var rowCells = allRows[singleRow].split('\t');
                 var post = '<li class="article-list-item">';
                 post += '<a href="';
-                post += rowCells[3];
+                post += rowCells[4];
                 post += '" title="paper">';
                 post += '<h5>';
-                post += rowCells[0];
+                post += rowCells[1];
                 post += '</h5></a>';
                 post += '<p style="font-size: 12px;">';
-                post += rowCells[2];
+                post += rowCells[3];
                 post += '</p>';
                 post += '<p>';
-                post += rowCells[4];
-                post += '</p>';
-                post += '<div class="article-list-footer"><span class="article-list-date">';
-                post += rowCells[1];
-                post += '</span></div>';
+                post += rowCells[5];
+                post += '</p><li>';
+                //post += '<div class="article-list-footer"><span class="article-list-date">';
+                //post += rowCells[1];
+                //post += '</span></div>';
                 $(".article-list").append(post);
         }
      }
