--- a/research/paper.html
+++ b/research/paper.html
@@ -121,7 +121,7 @@
                 post += '</p>';
                 post += '<p>';
                 post += rowCells[5];
-                post += '</p><li>';
+                post += '</p></li>';
                 //post += '<div class="article-list-footer"><span class="article-list-date">';
                 //post += rowCells[1];
                 //post += '</span></div>';
