--- a/rd/2.html
+++ b/rd/2.html
@@ -72,7 +72,7 @@
         </nav>
 
         <article class="article ">
-            <h1>In vivo 효능 평가 플랫폼</h1>
+            <h1>보유 뇌질환 모델</h1>
             <img style="margin-top: 20px;  margin-right: auto; margin-left: auto; height: auto" align="middle"  src="/assets/model.png" alt="model" />
         </article>
         <footer class="footer ">
