--- a/research/paper.html
+++ b/research/paper.html
@@ -101,7 +101,7 @@
   </main>
   <script>
       $.ajax({
-        url: '../contents/papers.csv',
+        url: '../contents/papers.tsv',
         dataType: 'text',
         }).done(successPapers);
 
@@ -130,7 +130,7 @@
      }
 
       $.ajax({
-        url: '../contents/patents.csv',
+        url: '../contents/patents.tsv',
         dataType: 'text',
      }).done(successPatents);
 
