--- a/rd/1.html
+++ b/rd/1.html
@@ -96,12 +96,19 @@
             </div>
           </div>
           <h2 style="margin-top:80px;">서비스 신청 절차</h1>
+            <div class="about " style="margin-top: 30px;">
+              <p><i class="material-icons" style="font-size: 15px;">home</i>&nbsp;&nbsp;서울특별시 광진구 능동로120, 건국대학교 의생명연구동 7층</p>
+              <p><i class="material-icons" style="font-size: 15px;">phone</i>&nbsp;&nbsp;02-454-0857</p>
+              <p><i class="material-icons" style="font-size: 13px;">email</i>&nbsp;&nbsp;&nbsp;contact@trineuro.com</p>
+            </div>
           <img style="margin-top: 50px;" align="middle"  src="/assets/rd_1.png" alt="rd" />
         </article>
         <footer class="footer ">
           <p>
             Trineuro.
           </p>
+          <p><i class="material-icons" style="font-size: 15px;">home</i>&nbsp;&nbsp;서울특별시 광진구 능동로120, 건국대학교 의생명연구동 7층</p>
+          <p><i class="material-icons" style="font-size: 15px;">phone</i>&nbsp;&nbsp;02-454-0857</p>
         </footer>
       </div>
     </div>
