--- a/rd/3.html
+++ b/rd/3.html
@@ -72,76 +72,63 @@
         </nav>
 
         <article class="article ">
-            <h1>In vivo 효능 평가 플랫폼</h1>
+            <h1>In vitro 효능 평가 및 기전연구 플랫폼</h1>
             <div style="margin-top:20px;" class="table-responsive-vertical shadow-z-1">
                <table id="table" class="table table-mc-light-blue">
                     <thead>
                       <tr>
-                        <th style="width: 20%">평가항목</th>
-                        <th style="width: 50%">적용실험기법</th>
-                        <th>활용가능질환</th>
+                        <th style="width: 20%;">평가항목</th>
+                        <th>활용범위 및 실험기법</th>
+                        <th>활용 부위</th>
                       </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>행동평가 분석시스템</td>
-                            <td>AI 딥러닝 기반 3차원 행동분석 자동화 분석 시스템<br>Ethovision XT System</td>
-                            <td>자폐스펙트럼장애, ADHD, 우울증, 조현병, PD, AD등 뇌신경질환</td>
+                            <td>신경세포 보호작용</td>
+                            <td>1. In vivo <br>1) Hematoxylin & Eosin staining, Cresyl violet 염색<br>2) TUNEL 염색법, Fluoro Jade B 염색<br>3) TTC 염색4) Immunohisto(cyto)chemistry <br>2. in vitro <br>1) LDH 측정, MTT 분석, PI 염색, calcein AM <br>3. 신경보호인자 생성: BDNF, NT, GDNF등의 생성 및 발현 (Western blot)</td>
+                            <td>조직 및 세포</td>
                         </tr>
                         <tr>
-                            <td>사회성, 사회선택성</td>
-                            <td>Three chamber test<br>Home cage social test<br>Social Dominance Tube Test</td>
-                            <td>자폐스펙트럼장애, 조현병</td>
+                            <td>신경염증반응</td>
+                            <td>1. ROS 관련<br>1) ROS 측정: DCFH2-DA, DHE, Rhodamine123, TMRE <br>2) 4-HNE/MDA, Peroxiredoxin등의 발현변화<br>3) 항산화물질의 변동: GSH, SOD, NADPH Oxidase, HO-1발현변화<br>4) Western blot, RT-PCR, Enzyme activity assay (ELISA)<br>2. 염증성매개인자의 발현 <br>1) 염증성 Cytokines 발현: iL-1beta, IL-6, IL-18, TNFalpha, TGFbeta 등<br>2) COX-2/PGs발현, iNOS/NO 발현 및 분비<br>3) mmps, tPA/PAI-1 발현 및 효소활성<br>4) Western blot, RT-PCR, Zymography, ELISA
+</td>
+                            <td>조직 및 세포</td>
                         </tr>
                         <tr>
-                            <td>의사소통</td>
-                            <td>Ultrasonic vocalization: Sonotrack</td>
-                            <td>자폐스펙트럼장애, 조현병</td>
+                            <td>분자생물학적 접근</td>
+                            <td>1) 유전자 발현 변동: RT-PCR, Microarray, PCR-Array, ChIP assay<br>2) Gene knockdown by Transient transfection: siRNA/shRNA transfection<br>3) Gene Overexpression</td>
+                            <td>조직 및 세포</td>
                         </tr>
                         <tr>
-                            <td>반복행동</td>
-                            <td>Marble burying test<br>Self grooming test<br>Nest building test</td>
-                            <td>자폐스펙트럼장애, ADHD, 조현병등</td>
+                            <td>교세포 활성화측정</td>
+                            <td>1) GFAP, NG2, Iba-1, OX-6, MBP, Ki-67 염색 <br>2) migration assay : migration chamber 사용, Co-culture system (transwell 사용)<br>3) phagocytosis: phagocytotic receptor 발현 변화 (Western blot), phagocytosis 측정<br>4) protease 활성정도: MMP9, tPA/PAI-1 활성 및 발현</td>
+                            <td>세포 및 뇌조직</td>
                         </tr>
                         <tr>
-                            <td>운동기능</td>
-                            <td>Open field test<br>beam walking test<br>footprint test<br>rota-rod test<br>grip strength test<br>grid walking test<br>Cylinder test</td>
-                            <td>ADHD, 자폐스펙트럼장애, 우울증, PD, 뇌졸중등 뇌신경질환</td>
+                            <td>신경가소성 및 synaptogenesis 측정</td>
+                            <td>1) NCAM, BDNF, tPA/PAI-1, MMPs 분비와 발현 변화확인 (Western blot, RT-PCR, ELISA, Zymography)<br>2) PSD95, Synaptophysin 염색 및 발현 양 비교 (Immunohistochemistry, Western blot)<br>3) nNOS/NO 활성<br>4) 시냅스 분석: Synaptosomal fraction 에 의한 Western blot<br>5) EM 사진에 의한 분석</td>
+                            <td>신경줄기세포 및 신경세포, 뇌조직</td>
                         </tr>
                         <tr>
-                            <td>집중, 인지, 감각</td>
-                            <td>5-CSRT<br>Y-maze/T-maze test/Barns maze test<br>Novel object recognition test<br>Passive avoidance test<br>Morris water maze task<br>Acoustic startle response test<br>EEG</td>
-                            <td>ADHD, 자폐스펙트럼장애, 조현병, 치매, AD, PD, Stroke등 뇌신경질환</td>
+                            <td>신경줄기세포의 증식 및 분화</td>
+                            <td>1) 증식: MTT 분석, 면역 염색법 (Ki-67, BrdU, Nestin, doublecortin)<br>2) 분화: NeuN/Tuj-1, Nestin, GFAP등을 이용한 면역염색 및 Western blot<br>3) NCAM, BDNF, tPA/PAI-1, MMPs 분비와 발현 변화확인 (Western blot, RT-PCR, ELISA, tPA/PAI-1 Zymography)<br>4) Live cell imaging<br>5) Neurite outgrowth 측정: Inucyte analyzing system활용, Immunostaining을 통해 neurite 숫자, neurite 길이 측정 </td>
+                            <td>신경줄기세포 및 신경세포, 뇌조직</td>
                         </tr>
                         <tr>
-                            <td>불안</td>
-                            <td>Elevated plus maze test<br>Light-dart box test<br>Novel object recognition test<br>Open field test</td>
-                            <td></td>
+                            <td>신호전달관련 분석</td>
+                            <td>1) 염증 및 세포 사멸관련 신호전달기전<br>- Src, Fyn, Syk, calcineurin, TLR2/4, JAK/STAT, MAPKs, PKC, PKA, PKG, iNOS, mTOR, s6k1, AMPK, GSK3beta, PI3K, Akt, NF-kB, IkB, AP1, SP1, Nrf2/Keap1, FOXO, PARs, 등<br>2) 시냅스, 신경세포재생 및 인지기능 관련<br>- PI3K/Akt, MAPKs, BDNF, GDNF, eNOS/nNOS, c-fos, ARC,  CREB, CAMKII, Casein kinase, aurora kinase, </td>
+                            <td>조직 및 세포</td>
                         </tr>
                         <tr>
-                            <td>우울장애</td>
-                            <td>FST/TST<br>Acute/chronic restraint stress test<br>Light dark box test<br>Learned helplessness test<br>Novelty induced feeding suppression test<br>Sucrose preference test</td>
-                            <td>우울증, 조현병, 치매/AD, PD등 뇌신경질환</td>
+                            <td>Ca2+ Imaging</td>
+                            <td>1) Ca2+ imaging: Fura2/4 AM,을 이용한 세포내 Ca2+ level 변화<br>2) Oregon Green BAPTA-1<br>3) ELISA/Immunofluorescence</td>
+                            <td>조직 및 세포</td>
                         </tr>
                         <tr>
-                            <td>신경전달물질</td>
-                            <td>Fast scan voltammetry 활용<br>GABA, Glutamate, Dopamine등 측정</td>
-                            <td>ADHD, 자폐스펙트럼장애, 조현병, 치매, AD, PD, Stroke등 뇌신경질환</td>
-                        </tr>
-                        <tr>
-                            <td>의존성</td>
-                            <td>Conditioned place preference (CPP) test<br>Self administration (SA) test</td>
-                            <td>정신질환, 부작용검증</td>
-                        </tr>
-                        <tr>
-                            <td>충동성</td>
-                            <td>5-CSRT<br>Cliff avoidance test<br>Delayed discounting task</td>
-                            <td>ADHD, 자폐스펙트럼장애, 조현병등 정신질환 부작용검증</td>
-                        </tr>
-                        <tr>
-                            <td>수면장애</td>
-                            <td>Pentobarbital-induced sleeping test<br>Caffeine-induced sleep deprivation test<br>Sleep deprivation test</td>
-                            <td>수면장애, 뇌신경질환 부작용 검증</td>
+                            <td>Epigenetic modulation</td>
+                            <td>1) DNA methylation : DNA methyltransferases (DNMT1, 3a/3b, MeCP2<br>2) Histone acetylation: Histone acetyltransferase (HATs), Histone deacetylase (HDACs)<br>3) Histone methyltransferases (HMTs), histone demethylases, and histone kinases
+Western blot/RT-PCR 통한 각 enzymes의 발현변화<br>4) HDAC activity assay<br>5) DNA methylation assay (ChiP assay)</td>
+                            <td>조직 및 세포</td>
                         </tr>
                     </tbody>
                </table>
