--- a/contact/contact.html
+++ b/contact/contact.html
@@ -71,8 +71,8 @@
         </nav>
 
         <div class="about " style="margin-top: 30px;">
-          <p><i class="material-icons" style="font-size: 15px;">home</i>&nbsp;&nbsp;120 Neungdong-ro, Gwangjin-gu, Seoul 05029, Korea</p>
-          <p><i class="material-icons" style="font-size: 15px;">phone</i>&nbsp;&nbsp;82-2-454-5630</p>
+          <p><i class="material-icons" style="font-size: 15px;">home</i>&nbsp;&nbsp;서울특별시 광진구 능동로120, 건국대학교 의생명연구동 7층</p>
+          <p><i class="material-icons" style="font-size: 15px;">phone</i>&nbsp;&nbsp;02-454-0857</p>
           <p><i class="material-icons" style="font-size: 13px;">email</i>&nbsp;&nbsp;&nbsp;contact@trineuro.com</p>
           <div id="map" style="width:100%;height:400px;margin-top:70px;"></div>
         </div>
