--- a/rd/3.html
+++ b/rd/3.html
@@ -137,6 +137,8 @@ Western blot/RT-PCR 통한 각 enzymes의 발현변화<br>4) HDAC activity assay
           <p>
             Trineuro.
           </p>
+          <p><i class="material-icons" style="font-size: 15px;">home</i>&nbsp;&nbsp;서울특별시 광진구 능동로120, 건국대학교 의생명연구동 7층</p>
+          <p><i class="material-icons" style="font-size: 15px;">phone</i>&nbsp;&nbsp;02-454-0857</p>
         </footer>
       </div>
     </div>
