--- a/contact/contact.html
+++ b/contact/contact.html
@@ -108,6 +108,8 @@ function myMap() {
   <p>
     Trineuro.
   </p>
+          <p><i class="material-icons" style="font-size: 15px;">home</i>&nbsp;&nbsp;서울특별시 광진구 능동로120, 건국대학교 의생명연구동 7층</p>
+          <p><i class="material-icons" style="font-size: 15px;">phone</i>&nbsp;&nbsp;02-454-0857</p>
 </footer>
 
       </div>
